# GA_analysis_scripts

./: .gitignore  2D_plotdensity_openGL.py  Cu111.xyz  Literature.py  ase_run.py  db_index.sqlite  db_objects.h5  old_run.py  pyproject.toml  rdf.py  run.py  run_db.py  run_get_Emin.py  run_get_cross.py  run_get_xyz.py
plots/: config2.xyz  segmentation.py  segmentation_dino.py
scripts/: 2D_plot_openGL.py  2D_plotdensity_openGL.py  H_lateral.py  JML_comp.py  OH_lateral.py  OH_lateral_2D.py  OH_lateral_muH.py  Probability.py  gamma_plot.py  get_lowE_xyz.py  get_lowest.py  hydroxide.py  low_E_comp.py  merge.py  plot_OH_count.py  plot_composition.py  run_get_xyz.py
src/ga_analysis/: OH_analyzer.py  echem.py  plot_defaults.py  utils.py
stuctures/: Lit.xyz  out_ideal.xyz
